--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li>Senha precisa ter entre 6 e 12 caracteres</li>
     </ul>
     
-    <form action="/" method="POST" class='formulario'>
+    <form action="../" method="POST" class='formulario'>
       <label>Nome</label>
       <input type="text" class="nome validar">
       <label>Sobrenome</label>
